<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:scrollbars="none">

<!--    SCREEN AREA     -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="60">

        <TextView
            android:id="@+id/textViewHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:autoSizeMaxTextSize="35sp"
            android:autoSizeMinTextSize="30sp"
            android:autoSizeTextType="uniform"
            android:backgroundTint="#3C3C3C"
            android:textAlignment="textEnd"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textViewInputScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="60sp"
            android:autoSizeMinTextSize="40sp"
            android:autoSizeTextType="uniform"
            android:textAlignment="gravity"
            android:gravity="right"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="40">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="10">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonReset"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="20sp"
                android:fontFamily="@font/audiowide"
                android:text="@string/reset"
                android:textSize="34sp"
                android:visibility="visible"
                app:rippleColor="#4AFF0000"
                tools:visibility="visible"
                android:autoSizeTextType="uniform"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNegative"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="20sp"
                android:fontFamily="@font/audiowide"
                android:text="@string/negative"
                android:visibility="visible"
                app:rippleColor="#4AFF0000"
                tools:visibility="visible"
                android:autoSizeTextType="uniform"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonModulo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="20sp"
                android:fontFamily="@font/audiowide"
                android:text="@string/operand_modulo"
                android:visibility="visible"
                app:rippleColor="#4AFF0000"
                tools:visibility="visible"
                android:autoSizeTextType="uniform"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDivide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="20sp"
                android:fontFamily="@font/audiowide"
                android:text="@string/operand_division"
                android:visibility="visible"
                app:rippleColor="#4AFF0000"
                tools:visibility="visible"
                android:autoSizeTextType="uniform"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="20sp"
                android:fontFamily="@font/audiowide"
                android:text="@string/number_seven"
                android:visibility="visible"
                app:rippleColor="#4AFF0000"
                tools:visibility="visible"
                android:autoSizeTextType="uniform"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="20sp"
                android:fontFamily="@font/audiowide"
                android:text="@string/number_eight"
                android:visibility="visible"
                app:rippleColor="#4AFF0000"
                tools:visibility="visible"
                android:autoSizeTextType="uniform"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="20sp"
                android:fontFamily="@font/audiowide"
                android:text="@string/number_nine"
                android:visibility="visible"
                app:rippleColor="#4AFF0000"
                tools:visibility="visible"
                android:autoSizeTextType="uniform"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonMultiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="20sp"
                android:fontFamily="@font/audiowide"
                android:text="@string/operand_multiply"
                android:visibility="visible"
                app:rippleColor="#4AFF0000"
                tools:visibility="visible"
                android:autoSizeTextType="uniform"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="10">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="20sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/audiowide"
                android:text="@string/number_four"
                android:visibility="visible"
                app:rippleColor="#4AFF0000"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="20sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/audiowide"
                android:text="@string/number_five"
                android:visibility="visible"
                app:rippleColor="#4AFF0000"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="20sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/audiowide"
                android:text="@string/number_six"
                android:visibility="visible"
                app:rippleColor="#4AFF0000"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonMinus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="20sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/audiowide"
                android:text="@string/operand_minus"
                android:visibility="visible"
                app:rippleColor="#4AFF0000"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="10">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="20sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/audiowide"
                android:text="@string/number_one"
                android:visibility="visible"
                app:rippleColor="#4AFF0000"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="20sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/audiowide"
                android:text="@string/number_two"
                android:visibility="visible"
                app:rippleColor="#4AFF0000"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="20sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/audiowide"
                android:text="@string/number_three"
                android:visibility="visible"
                app:rippleColor="#4AFF0000"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="20sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/audiowide"
                android:text="@string/operand_addition"
                android:visibility="visible"
                app:rippleColor="#4AFF0000"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="10">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="20sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/audiowide"
                android:text="@string/number_zero"
                android:visibility="visible"
                app:rippleColor="#4AFF0000"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDecimal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="20sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/audiowide"
                android:text="@string/decimal"
                android:visibility="visible"
                app:rippleColor="#4AFF0000"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEqual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:autoSizeMaxTextSize="40sp"
                android:autoSizeMinTextSize="20sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/audiowide"
                android:text="@string/operand_equal"
                android:visibility="visible"
                app:rippleColor="#4AFF0000"
                tools:visibility="visible" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>

